feat(dto generation) : handling sub packages