@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.byoskill.tools</groupId>
     <artifactId>spring-crud-generator</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <assertj-core.version>3.15.0</assertj-core.version>
@@ -28,7 +28,6 @@
 
         <json-path.version>2.4.0</json-path.version>
         <jsonassert.version>1.5.0</jsonassert.version>
-        <junit.version>5.7.0</junit.version>
 
         <logback-classic.version>1.2.3</logback-classic.version>
         <lombok.version>1.18.16</lombok.version>
@@ -63,24 +62,18 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <!--<release>1.8</release>-->
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
+                    <!--<source>1.8</source>
+                    <target>1.8</target>-->
                 </configuration>
             </plugin>
 
@@ -133,7 +126,11 @@
             <version>${javax.annotation-api.version}</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.12</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -183,25 +180,17 @@
             <version>${commons-io.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
-            <scope>compile</scope>
-        </dependency>
 
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>${commons-beanutils.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+        </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
@@ -256,5 +245,22 @@
             <version>2.4.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <artifactId>sequoia-domain</artifactId>
+            <groupId>com.osiatis.sequoia.java</groupId>
+            <version>5.0.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-run</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-extras</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
     </dependencies>
 </project>
